Update style.css with spacing fixes and new breakpoint

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ header ul li {
     padding-left: 0px !important;
     padding-bottom: 5px;
     text-align: center;
+    font-weight: bold;
 }
 
 .list-col > ul a {
@@ -289,12 +290,12 @@ footer {
     }
     
     .list-col > ul {
-        padding-top: 10%;       
+        padding: 8% 5%;
     }
     
      .list-col > ul li {
-        padding: 10px 2px;
-        font-size: 20px;
+        padding: 8px 6px;
+        font-size: 18px;
         text-align: left;
     }
 
@@ -304,4 +305,26 @@ footer {
         display: block;
     }
     
+}
+
+@media only screen and (min-width: 1400px) {
+    
+    .list-col > ul {
+        padding: 4%;
+    }
+    
+    .list-col > ul li {
+        padding: 10px 2px;
+    }
+}
+
+@media only screen and (min-width: 1600px) {
+    
+    .list-col > ul {
+        padding: 2%;
+    }
+    
+    .list-col > ul li {
+        font-size: 20px;
+    }
 }
